Replace placeholder domain with archlinux.email

--- a/roles/ldap_mail_users/templates/welcome.html.j2
+++ b/roles/ldap_mail_users/templates/welcome.html.j2
@@ -21,6 +21,6 @@ Cheers,<br>
 Staff
 </p>
 <hr>
-<p><a href="https://mail.example.email">Webmail</a> | <a href="mailto: admin@example.email">Contact</a></p>
+<p><a href="https://mail.archlinux.email">Webmail</a> | <a href="mailto: staff@archlinux.email">Contact</a></p>
 </body>
 </html>
